[package]
name = "quantum_adventure_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_ecs_tilemap = "^0.5.0"
rand = "0.8.4"
num = "0.4.0"
